--- a/src/styles/todonVar.scss
+++ b/src/styles/todonVar.scss
@@ -8,8 +8,21 @@ $color-primary: #0F8CFF;
 
 /* cardBox  */
 $cardBox-border-radius: 24px;
+$cardBox-padding: 10px 20px;
 
 
+/* banner */
+
+
+
+/* dropMenu */
+$menu-icon-color: #000;
+$menu-icon-font-size: 24px;
+$menu-color: #000;
+$menu-font-color: #fff;
+$menu-border-radius: 8px;
+$menu-padding: 14px 10px;
+$menu-font-size: 14px;
 
 /* Button */
 $btn-color: #1B1C1F;
