feat: 完成 addTodo UI

--- a/src/styles/todonVar.scss
+++ b/src/styles/todonVar.scss
@@ -11,6 +11,7 @@ $cardBox-border-radius: 24px;
 $cardBox-padding: 10px 20px;
 
 
+
 /* banner */
 
 
@@ -25,6 +26,7 @@ $menu-padding: 14px 10px;
 $menu-font-size: 14px;
 
 /* Button */
+$btn-background:  linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
 $btn-color: #1B1C1F;
 $btn-font-color: #fff;
 $btn-border-color: #fff;
